basic exception handling + documentation
